--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>geekweb</module>
+        <module>geek-web</module>
         <module>geek-service</module>
         <module>geek-dao</module>
         <module>geek-Arithmetics</module>
